--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -44,9 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="LOGIN"
-            android:textColor="#B0D8D7"
+            android:textColor="@color/aqua_darker"
             android:background="@drawable/start_sign"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/white_fixed"
             app:scale_height="50"
             app:scale_left="50"
             app:scale_textsize="20"
@@ -61,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SIGN UP"
-            android:textColor="@color/white"
+            android:textColor="@color/white_fixed"
             android:background="@drawable/start_sign"
             app:scale_height="50"
             app:scale_left="50"
