--- a/app/src/main/res/layout/item_bookmark.xml
+++ b/app/src/main/res/layout/item_bookmark.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="용어샘플"
-            android:textColor="@color/darker_gray2_to_white"
+            android:textColor="@color/darker_gray_to_white"
             app:scale_height="30"
             app:scale_left="10"
             app:scale_textsize="17.5"
@@ -41,7 +41,6 @@
             android:id="@+id/heart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:background="#00FFFFFF"
             android:gravity="center_vertical"
             android:scaleType="center"
@@ -56,9 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#00FFFFFF"
-
             android:gravity="center_vertical"
-
             app:scale_height="30"
             app:scale_left="260"
             app:scale_top="5"
@@ -72,7 +69,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="meaning sample goes here with meaning sample goes here"
-            android:textColor="@color/darker_gray2_to_white"
+            android:textColor="@color/darker_gray_to_white"
             app:scale_height="40"
             app:scale_left="10"
             app:scale_textsize="15"
@@ -97,6 +94,7 @@
             android:background="@drawable/aqua_darker_background_round"
             android:gravity="center"
             android:text="정치"
+            android:textColor="@color/darker_gray"
             app:scale_height="28"
             app:scale_left="10"
             app:scale_textsize="12"
@@ -110,9 +108,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/aqua_background_round"
-
+            android:textColor="@color/darker_gray"
             android:gravity="center_vertical"
-            android:paddingStart="5dp"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
             android:text="해시1"
             app:scale_height="28"
             app:scale_left="65"
