--- a/app/src/main/res/layout/item_recent.xml
+++ b/app/src/main/res/layout/item_recent.xml
@@ -31,7 +31,7 @@
             android:text="단어"
             android:paddingTop="7dp"
             android:paddingStart="13dp"
-            android:textColor="@color/black_to_white"
+            android:textColor="@color/darker_gray_to_white"
             app:scale_height="11"
             app:scale_left="12"
             app:scale_textsize="5.5"
