--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,19 +10,19 @@
     <color name="white">#FF000000</color>
     <color name="white_box">#272727</color>
 
-    <color name="darker_gray2_to_white">#FFFFFF</color>
-    <color name="darker_gray2_to_black">#FF000000</color>
+    <color name="darker_gray_to_white">#FFFFFF</color>
+    <color name="darker_gray_to_black">#FF000000</color>
+    <color name="darker_gray3_to_black">#FF000000</color>
     <color name="mere_white_to_black">#FF000000</color>
     <color name="black_to_white">#FFFFFF</color>
     <color name="aqua_to_black">#FF000000</color>
+    <color name="white_to_darker_gray">#505050</color>
 
+    <color name="white_fixed">#FFFFFF</color>
 
     <color name="orange_point">#FF5940</color>
     <color name="aqua">#D7EBEA</color>
     <color name="aqua_darker">#B0D8D7</color>
-    <color name="darker_gray">#AAAAAA</color>
-    <color name="darker_gray2">#707070</color>
-    <color name="darker_gray3">#505050</color>
-
+    <color name="darker_gray">#505050</color>
     <color name="mere_white">#272727</color>
 </resources>
