--- a/app/src/main/res/layout/activity_login_2.xml
+++ b/app/src/main/res/layout/activity_login_2.xml
@@ -52,7 +52,7 @@
             app:scale_top="20"
             app:scale_width="350"
             android:textColor="@color/black_to_white"
-            android:textColorHint="@color/darker_gray2_to_white"
+            android:textColorHint="@color/darker_gray_to_white"
             android:background="@drawable/inputbox_selector"
             android:fontFamily="@font/pretendard_regular"/>
 
@@ -69,7 +69,7 @@
             app:scale_top="90"
             app:scale_width="350"
             android:textColor="@color/black_to_white"
-            android:textColorHint="@color/darker_gray2_to_white"
+            android:textColorHint="@color/darker_gray_to_white"
             android:background="@drawable/inputbox_selector"
             android:fontFamily="@font/pretendard_regular"/>
 
@@ -80,7 +80,7 @@
             android:background="@drawable/loginaround"
             android:backgroundTint="@color/aqua_darker"
             android:text="LOGIN"
-            android:textColor="@color/white"
+            android:textColor="@color/white_to_darker_gray"
 
             app:scale_height="50"
             app:scale_left="50"
@@ -111,7 +111,7 @@
             android:gravity="center"
             android:text="OR"
             android:textAlignment="center"
-
+            android:textColor="@color/darker_gray_to_white"
             app:scale_height="30"
             app:scale_left="50"
             app:scale_textsize="15"
@@ -147,9 +147,10 @@
                 android:id="@+id/signup"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#D7EBEA"
+                android:background="@color/aqua"
                 android:text="SIGN UP"
                 android:textAlignment="center"
+                android:textColor="@color/darker_gray"
                 app:scale_height="50"
                 app:scale_textsize="15"
                 app:scale_width="400"
