--- a/app/src/main/res/layout/activity_search_2.xml
+++ b/app/src/main/res/layout/activity_search_2.xml
@@ -19,9 +19,9 @@
             android:id="@+id/scalableLayout_logo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:scale_base_height="300"
             app:scale_base_width="2120">
 
@@ -34,8 +34,8 @@
                 android:imeOptions="actionDone"
                 android:inputType="text"
                 android:paddingStart="45dp"
-                android:textColor="@color/black_to_white"
-                android:textColorHint="@color/black_to_white"
+                android:textColor="@color/darker_gray_to_white"
+                android:textColorHint="@color/darker_gray_to_white"
                 app:scale_height="270"
                 app:scale_textsize="100"
                 app:scale_top="30"
@@ -112,8 +112,8 @@
             android:id="@+id/scalableLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:scale_base_height="280"
             app:scale_base_width="2120">
 
@@ -125,7 +125,7 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="12dp"
                 android:text="최근 검색어"
-                android:textColor="@color/black_to_white"
+                android:textColor="@color/darker_gray_to_white"
                 android:visibility="gone"
                 app:scale_height="280"
                 app:scale_textsize="100"
@@ -140,7 +140,7 @@
                 android:background="#00ff0000"
                 android:paddingTop="1dp"
                 android:text="최근 검색 닫기"
-                android:textColor="@color/black_to_white"
+                android:textColor="@color/darker_gray_to_white"
                 android:visibility="gone"
                 android:fontFamily="@font/pretendard_regular"
                 app:scale_height="120"
@@ -154,8 +154,9 @@
             android:id="@+id/wordRe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/recy"
             android:orientation="vertical"
             android:visibility="gone"
@@ -167,8 +168,9 @@
             android:id="@+id/recent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/recy"
             android:orientation="vertical"
             android:visibility="gone"
