--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -50,8 +50,8 @@
             app:scale_textsize="20"
             app:scale_top="20"
             app:scale_width="350"
-            android:textColor="@color/black_to_white"
-            android:textColorHint="@color/darker_gray2_to_white"
+            android:textColor="@color/darker_gray_to_white"
+            android:textColorHint="@color/darker_gray_to_white"
             android:background="@drawable/inputbox_selector"
             android:fontFamily="@font/pretendard_regular"/>
 
@@ -67,8 +67,8 @@
             app:scale_textsize="20"
             app:scale_top="90"
             app:scale_width="350"
-            android:textColor="@color/black_to_white"
-            android:textColorHint="@color/darker_gray2_to_white"
+            android:textColor="@color/darker_gray_to_white"
+            android:textColorHint="@color/darker_gray_to_white"
             android:background="@drawable/inputbox_selector"
             android:fontFamily="@font/pretendard_regular"/>
 
@@ -85,8 +85,8 @@
             app:scale_textsize="20"
             app:scale_top="160"
             app:scale_width="350"
-            android:textColor="@color/black_to_white"
-            android:textColorHint="@color/darker_gray2_to_white"
+            android:textColor="@color/darker_gray_to_white"
+            android:textColorHint="@color/darker_gray_to_white"
             android:fontFamily="@font/pretendard_regular"/>
 
         <EditText
@@ -102,8 +102,8 @@
             app:scale_textsize="20"
             app:scale_top="230"
             app:scale_width="350"
-            android:textColor="@color/black_to_white"
-            android:textColorHint="@color/darker_gray2_to_white"
+            android:textColor="@color/darker_gray_to_white"
+            android:textColorHint="@color/darker_gray_to_white"
             android:fontFamily="@font/pretendard_regular"/>
 
         <Button
@@ -113,7 +113,7 @@
             android:background="@drawable/loginaround"
             android:backgroundTint="@color/aqua_darker"
             android:text="SIGN UP"
-            android:textColor="@color/white"
+            android:textColor="@color/white_to_darker_gray"
 
             app:scale_height="50"
             app:scale_left="50"
@@ -141,6 +141,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="OR"
+            android:textColor="@color/darker_gray_to_white"
             android:textAlignment="center"
             android:fontFamily="@font/pretendard_regular"
             app:scale_height="30"
@@ -177,11 +178,12 @@
                 android:id="@+id/loginB"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#D7EBEA"
+                android:background="@color/aqua"
                 android:text="LOGIN"
                 android:textAlignment="center"
                 app:scale_height="50"
                 app:scale_textsize="15"
+                android:textColor="@color/darker_gray"
                 app:scale_width="400"
                 android:fontFamily="@font/pretendard_bold"/>
         </com.ssomai.android.scalablelayout.ScalableLayout>
