--- a/app/src/main/res/layout/item_after_search.xml
+++ b/app/src/main/res/layout/item_after_search.xml
@@ -32,7 +32,7 @@
                 android:fontFamily="@font/pretendard_bold"
                 android:gravity="center_vertical"
                 android:text="단어"
-                android:textColor="#000000"
+                android:textColor="@color/darker_gray_to_white"
                 app:scale_height="12"
                 app:scale_left="5"
                 app:scale_textsize="6"
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="설명"
-                android:textColor="#97000000"
+                android:textColor="@color/darker_gray_to_white"
                 android:maxLines="2"
                 android:ellipsize="end"
                 app:scale_height="12"
@@ -75,12 +75,12 @@
                 app:scale_height="9"
                 app:scale_left="5"
                 app:scale_top="44.5"
-                android:textColor="@color/black"
+                android:textColor="@color/darker_gray"
                 app:scale_width="20"
                 app:scale_textsize="4"
                 android:paddingStart="6dp"
                 android:paddingEnd="6dp"
-                android:paddingTop="7dp"
+                android:gravity="center_vertical"
                 app:textview_wrapcontent_direction="right"
                 app:textview_wrapcontent_movesiblings="false" />
 
@@ -91,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/aqua_background_round_sharp"
                 android:text="# 해시태그  "
-                android:textColor="@color/black"
+                android:textColor="@color/darker_gray"
                 app:scale_height="9"
                 app:scale_left="28"
                 app:scale_textsize="4"
@@ -99,7 +99,7 @@
                 app:scale_width="49"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
-                android:paddingTop="7dp"
+                android:gravity="center_vertical"
                 app:textview_wrapcontent_resizesurrounded="false"
                 app:textview_wrapcontent_direction="right" />
 
