--- a/app/src/main/res/layout/item_termslist.xml
+++ b/app/src/main/res/layout/item_termslist.xml
@@ -5,24 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"  >
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        app:cardBackgroundColor="@color/white_box"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true">
+
     <com.ssomai.android.scalablelayout.ScalableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        app:scale_base_height="160"
-        app:scale_base_width="800">
-
-    <com.ssomai.android.scalablelayout.ScalableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/white_background_round"
-        android:elevation="5dp"
         app:scale_base_height="70"
-        app:scale_base_width="400"
-        app:scale_height="144"
-        app:scale_left="8"
-        app:scale_top="8"
-        app:scale_width="784">
+        app:scale_base_width="400">
 
         <TextView
             android:id="@+id/term"
@@ -32,7 +29,7 @@
             android:gravity="center_vertical"
 
             android:text="용어샘플"
-            android:textColor="@color/black_to_white"
+            android:textColor="@color/darker_gray_to_white"
             app:scale_height="60"
             app:scale_left="16"
             app:scale_textsize="17"
@@ -58,5 +55,5 @@
 
     </com.ssomai.android.scalablelayout.ScalableLayout>
 
-</com.ssomai.android.scalablelayout.ScalableLayout>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
