--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
 
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
-        <item name="android:textColor">@color/darker_gray3</item>
+        <item name="android:textColor">@color/darker_gray</item>
         <item name="android:textSize">23sp</item>
     </style>
 </resources>
